<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E2EC"
    tools:context=".Output_EMI">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/header_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/arbutus"
            android:text="@string/your_car_loan_details"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            android:contentDescription="@string/todo55"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/header_line"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/car_icon" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardBackgroundColor="#F7FFFFFF"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/carTextView_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/purple_700"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/downTextView_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textColor="@color/purple_700"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/loanTextView_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textColor="@color/counterRed"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/interestTextView_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textColor="@color/purple_700"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/termsTextView_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textColor="@color/purple_700"
                        android:layout_marginBottom="20dp"
                        android:textSize="24sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/emiTextView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/brawler"
                        android:gravity="center"
                        android:text="@string/emi_monthly_payable"
                        android:textColor="@color/colorAccent"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/emi_main_id12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"

                        android:fontFamily="@font/cinzel_decorative_bold"
                        android:gravity="center"
                        android:textColor="@color/GreenTextHint"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/total_interest_id12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/total_amount_id12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textColor="@color/black"
                        android:paddingLeft="10dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="20dp"/>

                    <Button
                        android:id="@+id/button_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_rounded"
                        android:layout_marginLeft="110dp"
                        android:textColor="@color/black"

                        android:text="See Details" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/chart_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="top"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/distribution_of_amount"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                    <!--Pie chart to display the data-->

                    <org.eazegraph.lib.charts.PieChart
                        android:id="@+id/piechart"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"

                        android:padding="6dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal">

                        <!--View to display the yellow color icon-->
                        <View
                            android:layout_width="15dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:background="@color/interestColor" />

                        <!--Text view to display R -->
                        <TextView
                            android:id="@+id/emi_chart_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:paddingLeft="10dp"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal">

                        <!--View to display the yellow color icon-->
                        <View
                            android:layout_width="15dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:background="@color/loanColor" />


                        <TextView
                            android:id="@+id/loan_chart_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:paddingLeft="10dp"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>